--- a/_config.yml
+++ b/_config.yml
@@ -3,13 +3,15 @@
 #
 
 # Name of your site (displayed in the header)
-name: Your Name
+name: Five-Dollar Shake (gh)
 
 # Short bio or description (displayed in the header)
-description: Web Developer from Somewhere
+description: A shake, Milk and ice cream. 
+Would you like to know what a five-dollar shake tastes like? 
+Be my guest. You can use my straw, I don't have kooties.
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https://avatars1.githubusercontent.com/u/2417562
 
 #
 # Flags below are optional
@@ -21,12 +23,12 @@ footer-links:
   email:
   facebook:
   flickr:
-  github: barryclark/jekyll-now
+  github:
   instagram:
-  linkedin:
+  linkedin: ruben.llibre
   pinterest:
-  rss: # just type anything here for a working RSS icon
-  twitter: jekyllrb
+  rss: x# just type anything here for a working RSS icon
+  twitter: 
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
   youtube: # channel/<your_long_string> or user/<user-name>
   googleplus: # anything in your profile username that comes after plus.google.com/
@@ -41,7 +43,7 @@ google_analytics:
 
 # Your website URL (e.g. http://barryclark.github.io or http://www.barryclark.co)
 # Used for Sitemap.xml and your RSS feed
-url:
+url: rcphq.github.io
 
 # If you're hosting your site at a Project repository on GitHub pages
 # (http://yourusername.github.io/repository-name)
@@ -56,7 +58,7 @@ baseurl: ""
 permalink: /:title/
 
 # The release of Jekyll Now that you're using
-version: v1.2.0
+version: v3.8.5
 
 # Jekyll 3 now only supports Kramdown for Markdown
 kramdown:
