--- a/_config.yml
+++ b/_config.yml
@@ -6,9 +6,7 @@
 name: Five-Dollar Shake (gh)
 
 # Short bio or description (displayed in the header)
-description: A shake, Milk and ice cream. 
-Would you like to know what a five-dollar shake tastes like? 
-Be my guest. You can use my straw, I don't have kooties.
+description: A shake, Milk and ice cream. Would you like to know what a five-dollar shake tastes like? Be my guest. You can use my straw, I dont have kooties.
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://avatars1.githubusercontent.com/u/2417562
